Complete backend modules: receptionist, appointments, medical records, notifications and dashboards